# langchain_learning

./: .gitignore  pyproject.toml
01_chat/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_conversation_with_user.py  4_chat_model_save_message_history_firebase.py
02_prompt/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
03_chain/: 1_chains_basics.py  2_chains_extended.py  3_chains_parallel.py  4_chain_branching.py  practice.py
